--- a/index.ipynb
+++ b/index.ipynb
@@ -147,10 +147,10 @@
     "2. **Data Cleaning and Preparation**: Cleaning the data to handle missing values, outliers, and incorrect data types.\n",
     "3. **Exploratory Data Analysis (EDA)**: Analyzing the data to find patterns, relationships, and insights.\n",
     "4. **Data Preprocessing**: This includes `Feature Selection`, `Target Variable Encoding`, `Time Conversion` and `Categorical Encoding`.\n",
-    "5. **Data Splitting**: Splitting data into Training and Testing sets using the **70/20** ratio.\n",
+    "5. **Data Splitting**: Splitting data into Training and Testing sets using the **70/30** ratio.\n",
     "6. **Model Selection and Training**: Come up with model choice and model training.\n",
     "7. **Model Evaluation**: Check on Accuracy and Classification Report\n",
-    "8. **Discussion and Next Steps**: Model Performance Analaysis and Future work"
+    "8. **Discussion and Next Steps**: Model Performance Analysis and Future work"
    ]
   },
   {
