Finished the changes

--- a/index.ipynb
+++ b/index.ipynb
@@ -1394,7 +1394,7 @@
     "   \n",
     "- **Unable to Determine** is changed to **Unknown**\n",
     "\n",
-    "1. Officer Race:  \n",
+    "3. Officer Race:  \n",
     "\n",
     "- **Two or More Races** is renamed to **Multi-Racial**"
    ]
@@ -1929,7 +1929,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The output shows that Subjects aged between 26-35 years faced highest number of Stops that led to Arrests followed closely by those aged betweeen 36-45 years and 18- 25 years. The rest of the age group's counts are relatively small"
+    "The output shows that Subjects aged between 26-35 years faced highest number of Stops that led to Arrests followed closely by those aged between 36-45 years and 18- 25 years. The rest of the age group's counts are relatively small"
    ]
   },
   {
@@ -1992,7 +1992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *Distribution of Races for both Officers and Subject*"
+    "### *Distribution of Races for both Officers and Subjects*"
    ]
   },
   {
@@ -2451,6 +2451,13 @@
     "The plot shows a strong gender imbalance among officers, with a majority being male. Female officers are fewer, and non-binary or unspecified genders are extremely rare in this dataset. \n",
     "\n",
     "Gender Imbalance: The chart highlights a stark gender imbalance within the police force, with male officers being the predominant gender. This could have implications for the dynamics within the force and the broader impact on community interactions and perceptions of law enforcement. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *Distribution of Subject Perceived Gender in Terry Stops*"
    ]
   },
   {
