Made Introduction Changes

--- a/index.ipynb
+++ b/index.ipynb
@@ -18,9 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the realm of law enforcement, Terry Stops have been a subject of ongoing debate and scrutiny since their inception following the 1968 Supreme Court case Terry v. Ohio. These brief detentions, based on reasonable suspicion rather than probable cause, have become a common policing practice but have also raised concerns about potential biases and the fine line between public safety and individual rights. This project aims to delve into the complex dynamics of Terry Stops by leveraging data analytics and machine learning techniques. Our goal is to develop a predictive model that can determine the likelihood of an arrest following a Terry Stop, based on various factors such as the presence of weapons, time of day, and potentially sensitive demographic information like race and gender.  \n",
-    "\n",
-    "By analyzing this data, we seek to uncover patterns and insights that could help law enforcement agencies refine their practices, address potential biases, and strike a balance between effective policing and fair treatment of all individuals. This analysis is particularly timely given the current national discourse on police reform and racial equity in the justice system. Our approach will involve careful consideration of ethical implications, transparent methodology, and a commitment to presenting findings in a way that contributes constructively to the ongoing dialogue about fair and effective law enforcement. Through this project, we aim to provide data-driven insights that can inform policy decisions, enhance police training, and ultimately contribute to building trust between law enforcement and the communities they serve. As we embark on this analysis, we recognize the sensitivity of the subject matter and the potential impact of our findings. Our objective is not to pass judgment but to illuminate patterns and trends that can lead to more informed, equitable, and effective policing practices in the context of Terry Stops.  "
+    "This project explores the dynamics of Terry Stops, brief detentions based on reasonable suspicion, which have been a common yet contentious law enforcement practice since the 1968 Supreme Court ruling in Terry v. Ohio. Leveraging data analytics and machine learning, our aim is to develop a predictive model to assess the likelihood of an arrest following a Terry Stop, considering factors such as weapon presence, time of day, and demographic details like race and gender. Our analysis seeks to uncover patterns that can help refine policing practices, address potential biases, and contribute to the ongoing discourse on police reform and racial equity. Through a transparent and ethically grounded approach, we aim to provide insights that inform policy, enhance police training, and foster trust between law enforcement and communities  "
    ]
   },
   {
@@ -12616,7 +12614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
